# android-gemini-replacement

./: .gitignore  IMPLEMENTED_FEATURES.md  README.md  SPECIFICATIONS.md  TESTING.md  TESTING_OFFLINE.md  TODO.md  build.gradle  get_gemini_nano.md  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama-android.cpp
app/src/main/java/com/abettergemini/assistant/: AICoreClient.kt  AssistantRecognitionService.java  AssistantService.java  AssistantSession.java  AssistantSessionService.java  EncryptedPrefsManager.java  InferenceBackend.java  LlamaCppBackend.kt  MainActivity.java  MemoryManager.java  ModelConfig.java  OpenClawBackend.kt  PreferencesManager.java  ThemeManager.java  ToolExecutor.java  VoiceManager.java  WebScraper.java
app/src/main/java/com/openclaw/assistant/: AICoreClient.java  AssistantRecognitionService.java  AssistantService.java  AssistantSession.java  AssistantSessionService.java  MainActivity.java  MemoryManager.java  PreferencesManager.java  VoiceManager.java
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: assistant_info.xml
app/src/test/java/com/abettergemini/assistant/: AssistantLogicTest.java  ComprehensiveLogicTest.java
app/src/test/java/com/openclaw/assistant/: AssistantLogicTest.java  ComprehensiveLogicTest.java
gradle/wrapper/: gradle-wrapper.properties
tmp/: aicore-0.0.1-exp02.aar
